<?xml version="1.0"?>
<package format="2">
  <name>detector_demo</name>
  <version>0.0.0</version>
  <description>Detector demo for ME134</description>

  <!-- A maintainer and license tag are required, but leave as todo -->
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>

  <!-- Dependencies (can be catkin packages or system dependencies) -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>visualization_msgs</depend>
  <depend>urdfdom_ppy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
